<resources>
    <string name="app_name">MTMsApplication</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_location">Your location</string>
    <string name="destination">Destination</string>
    <string name="request_rd">REQUEST RD</string>
    <string name="trips">Trips</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="app_location_permission">App Location Permission</string>
    <string name="location_permission_msg">You need to allow permission ALL THE TIME to use the application</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_allow_location_permission">Please allow location permission</string>
</resources>