<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">

    <item
        android:id="@+id/nav_trips"
        android:icon="@drawable/assets_ic_my_trips"
        android:title="@string/trips"
        android:visible="true"/>

    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/assets_ic_wallet"
        android:title="@string/wallet" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/assets_ic_settings"
        android:title="@string/settings"
        android:visible="true"/>
    <item
        android:id="@+id/nav_aboutus"
        android:icon="@drawable/assets_ic_help"
        android:title="@string/about_us"
        android:visible="true"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/assets_ic_logout"
        android:title="@string/logout"
        android:visible="true"/>

</menu>