<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MapsActivity"
    android:id="@+id/drawerLayout"
    tools:openDrawer="start"
    android:keepScreenOn="true"
    android:fitsSystemWindows="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_constraintlayout"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:background="@drawable/view_background_maps_activity_menu"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_menu"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            android:background="@drawable/assets_back_arrow"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/yourlocation_editext"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/your_location"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:background="@drawable/view_background_maps_activity_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_icon"/>


        <fragment
            android:id="@+id/destination_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/destination"
            android:textColorHint="@color/grey"
            android:background="@drawable/view_background_maps_activity_edittext"
            app:layout_constraintStart_toStartOf="@id/yourlocation_editext"
            app:layout_constraintEnd_toEndOf="@id/yourlocation_editext"
            app:layout_constraintTop_toBottomOf="@id/yourlocation_editext"/>

        <TextView
            android:id="@+id/chosen_place_txt"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/destination"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:background="@drawable/view_background_maps_activity_edittext"
            app:layout_constraintStart_toStartOf="@id/yourlocation_editext"
            app:layout_constraintEnd_toEndOf="@id/yourlocation_editext"
            app:layout_constraintTop_toBottomOf="@id/yourlocation_editext" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/your_location_places_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp"
        tools:listitem="@layout/places_list_item"
        app:layout_constraintTop_toBottomOf="@id/view_constraintlayout"/>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MapsActivity" />

    <Button
        android:id="@+id/requestrd_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/view_background_maps_requestrd_button"
        android:text="@string/request_rd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/view_background_white_rounded"
        android:padding="16dp"
        android:visibility="visible"
        android:elevation="10dp"
        android:src="@drawable/ic_my_location"
        app:layout_constraintBottom_toTopOf="@id/requestrd_btn"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_menu_header"
        app:itemHorizontalPadding="48dp"
        app:itemIconPadding="16dp"
        app:itemIconSize="16dp"
        android:background="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/drawer_menu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            >
            <TextView
                android:id="@+id/footer_drawer_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="15dp"
                android:textColor="@color/black"
                android:text="v2" />

            <TextView
                android:id="@+id/footer_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:padding="15dp"
                android:textColor="@color/grey"
                android:text="app version" />
        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>